--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "leven": "3.1.0",
     "lines-and-columns": "1.1.6",
     "linguist-languages": "7.7.0",
-    "lodash.uniqby": "4.7.0",
+    "lodash": "4.17.15",
     "mem": "5.1.1",
     "minimatch": "3.0.4",
     "minimist": "1.2.0",
