--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,7 @@
     "clipboard": "2.0.4",
     "codemirror": "5.50.2",
     "codemirror-graphql": "0.11.2",
-    "lodash.groupby": "4.6.0",
+    "lodash": "4.17.15",
     "lz-string": "1.4.4",
     "prop-types": "15.7.2",
     "react": "16.12.0",
