--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/preset-env": "7.7.4",
     "@rollup/plugin-alias": "2.2.0",
     "@rollup/plugin-json": "4.0.0",
+    "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "2.2.1",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
@@ -103,7 +104,6 @@
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.1.2",
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
