Enable `unicorn/prefer-string-slice`

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -37,3 +37,4 @@ rules:
     - exceptRange: true
   unicorn/new-for-builtins: error
   unicorn/prefer-includes: error
+  unicorn/prefer-string-slice: error
