--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "jest-snapshot-serializer-ansi": "1.0.0",
     "jest-snapshot-serializer-raw": "1.1.0",
     "jest-watch-typeahead": "0.4.2",
-    "mkdirp": "0.5.1",
+    "make-dir": "3.0.0",
     "prettier": "1.19.1",
     "rimraf": "3.0.0",
     "rollup": "1.27.13",
