--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -20,6 +20,9 @@ rules:
   no-inner-declarations: error
   no-unneeded-ternary: error
   no-useless-return: error
+  no-unused-vars:
+    - error
+    - ignoreRestSiblings: true
   no-var: error
   one-var:
     - error
