--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@babel/core": "7.7.2",
     "@babel/preset-env": "7.7.4",
     "@rollup/plugin-alias": "3.0.0",
+    "@rollup/plugin-commonjs": "11.0.1",
     "@rollup/plugin-json": "4.0.1",
     "@rollup/plugin-replace": "2.3.0",
     "babel-loader": "8.0.6",
@@ -99,7 +100,6 @@
     "rimraf": "3.0.0",
     "rollup": "1.29.0",
     "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.1.3",
