Add changelog lint script

--- a/.azure-pipelines/jobs/dev-lint.yml
+++ b/.azure-pipelines/jobs/dev-lint.yml
@@ -11,3 +11,5 @@ steps:
     displayName: "Lint docs"
   - script: yarn spellcheck
     displayName: "Spellcheck"
+  - script: yarn lint-changelog
+    displayName: "Lint changelog"
