--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "perf-benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "check-types": "tsc",
     "lint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
+    "lint-changelog": "node ./scripts/lint-changelog.js",
     "lint-docs": "prettier {.,docs,website,website/blog,changelog_unreleased,changelog_unreleased/*}/*.md --check",
     "lint-dist": "eslint --no-eslintrc --no-ignore --env=browser \"dist/!(bin-prettier|index|third-party).js\"",
     "build": "node --max-old-space-size=3072 ./scripts/build/build.js",
