--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,6 +21,7 @@ rules:
   no-unneeded-ternary: error
   no-useless-return: error
   no-var: error
+  object-shorthand: error
   one-var:
     - error
     - never
