Style: enable `eqeqeq` (#7324)
Co-authored-by: Georgii Dolzhykov <thorn.mailbox@gmail.com>

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,10 @@ plugins:
 rules:
   curly: error
   dot-notation: error
+  eqeqeq: 
+    - error
+    - always
+    - null: ignore
   import/no-extraneous-dependencies:
     - error
     - devDependencies: ["tests*/**", "scripts/**"]
