Style: use object destructuring (#7325)
* Style: use object destructuring

* Update versions.js

* Update sync-flow-tests.js

* Update core.js

Co-authored-by: Georgii Dolzhykov <thorn.mailbox@gmail.com>

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,6 +32,15 @@ rules:
     - never
   prefer-arrow-callback: error
   prefer-const: error
+  prefer-destructuring:
+    - error
+    - VariableDeclarator:
+        array: false
+        object: true
+      AssignmentExpression:
+        array: false
+        object: false
+    - enforceForRenamedProperties: false
   prefer-spread: error
   react/display-name: off
   react/no-deprecated: off
