--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,7 +14,7 @@ plugins:
 rules:
   curly: error
   dot-notation: error
-  eqeqeq: 
+  eqeqeq:
     - error
     - always
     - null: ignore
@@ -57,3 +57,14 @@ rules:
     - exceptRange: true
   unicorn/new-for-builtins: error
   unicorn/prefer-includes: error
+overrides:
+  - files:
+      - "{tests,tests_config,tests_integration}/**/*.js"
+    env:
+      jest: true
+  - files:
+      - tests/**/*.js
+    rules:
+      strict: off
+    globals:
+      run_spec: false
