--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "minimist": "1.2.0",
     "n-readlines": "1.0.0",
     "normalize-path": "3.0.0",
-    "parse-srcset": "ikatyang/parse-srcset#54eb9c1cb21db5c62b4d0e275d7249516df6f0ee",
     "postcss-less": "2.0.0",
     "postcss-media-query-parser": "0.2.3",
     "postcss-scss": "2.0.0",
@@ -64,6 +63,7 @@
     "remark-parse": "5.0.0",
     "resolve": "1.14.2",
     "semver": "7.1.1",
+    "srcset": "2.0.1",
     "string-width": "4.2.0",
     "typescript": "3.7.4",
     "unicode-regex": "3.0.0",
