Switch `rollup-plugin-node-resolve` to `@rollup/plugin-node-resolve` (#7248)

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@rollup/plugin-alias": "3.0.0",
     "@rollup/plugin-commonjs": "11.0.1",
     "@rollup/plugin-json": "4.0.1",
+    "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "2.3.0",
     "babel-loader": "8.0.6",
     "benchmark": "2.1.4",
@@ -101,7 +102,6 @@
     "rollup": "1.29.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.2.0",
     "shelljs": "0.8.3",
     "snapshot-diff": "0.4.0",
