--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -43,6 +43,7 @@ rules:
         array: false
         object: false
     - enforceForRenamedProperties: false
+  prefer-object-spread: error
   prefer-spread: error
   quotes:
     - error
