Enable ESLint `prefer-rest-params` rule (#7400)

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -44,6 +44,7 @@ rules:
         object: false
     - enforceForRenamedProperties: false
   prefer-object-spread: error
+  prefer-rest-params: error
   prefer-spread: error
   quotes:
     - error
