--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -23,14 +23,41 @@ jobs:
       - name: Build Package
         run: yarn build
 
-      - name: Lint Code
-        run: yarn test:dist
-
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
           name: dist
           path: dist
+
+  prod_lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12"
+
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build Package
+        run: yarn build
+
+      - name: Download Artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: dist
+          path: dist
+
+      - name: Lint Code
+        run: yarn test:dist
 
   prod_test:
     strategy:
@@ -70,3 +97,10 @@ jobs:
 
       - name: Run Test
         run: yarn test:dist
+
+      - name: Upload Coverage To Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage/cobertura-coverage.xml
+          fail_ci_if_error: true
