--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -29,7 +29,7 @@ jobs:
           name: dist
           path: dist
 
-  prod_lint:
+  lint:
     name: Lint
     runs-on: ubuntu-latest
     needs: [build]
@@ -56,7 +56,7 @@ jobs:
       - name: Lint Code
         run: yarn test:dist
 
-  prod_test:
+  test:
     strategy:
       fail-fast: false
       matrix:
