--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-html-parser": "1.4.0",
     "camelcase": "5.3.1",
     "chalk": "3.0.0",
+    "ci-info": "2.0.0",
     "cjk-regex": "2.0.0",
     "cosmiconfig": "6.0.0",
     "dashify": "2.0.0",
@@ -41,7 +42,6 @@
     "html-styles": "1.0.0",
     "html-tag-names": "1.1.5",
     "ignore": "4.0.6",
-    "is-ci": "2.0.0",
     "jest-docblock": "25.1.0",
     "json-stable-stringify": "1.0.1",
     "leven": "3.1.0",
