--- a/package.json
+++ b/package.json
@@ -116,18 +116,18 @@
     "prepare-release": "yarn && yarn build && yarn test:dist",
     "test": "jest",
     "test:dist": "node ./scripts/test-dist.js",
-    "test-integration": "jest tests_integration",
-    "perf-repeat": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
-    "perf-repeat-inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
-    "perf-benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
-    "check-types": "tsc",
-    "lint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
-    "lint-changelog": "node ./scripts/lint-changelog.js",
-    "lint-prettier": "prettier \"**/*.{md,json,yml,html,css}\" --check",
-    "lint-dist": "eslint --no-eslintrc --no-ignore --env=es6,browser \"dist/!(bin-prettier|index|third-party).js\"",
+    "test:integration": "jest tests_integration",
+    "perf:repeat": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
+    "perf:repeat-inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
+    "perf:benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
+    "lint:types": "tsc",
+    "lint:eslint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
+    "lint:changelog": "node ./scripts/lint-changelog.js",
+    "lint:prettier": "prettier \"**/*.{md,json,yml,html,css}\" --check",
+    "lint:dist": "eslint --no-eslintrc --no-ignore --env=es6,browser \"dist/!(bin-prettier|index|third-party).js\"",
+    "lint:spellcheck": "cspell {bin,scripts,src}/**/*.js {docs,website/blog,changelog_unreleased}/**/*.md",
+    "lint:deps": "node ./scripts/check-deps.js",
     "build": "node --max-old-space-size=3072 ./scripts/build/build.js",
-    "build-docs": "node ./scripts/build-docs.js",
-    "check-deps": "node ./scripts/check-deps.js",
-    "spellcheck": "cspell {bin,scripts,src}/**/*.js {docs,website/blog,changelog_unreleased}/**/*.md"
+    "build-docs": "node ./scripts/build-docs.js"
   }
 }
