--- a/.azure-pipelines/jobs/dev-lint.yml
+++ b/.azure-pipelines/jobs/dev-lint.yml
@@ -3,7 +3,7 @@ steps:
   - template: ../steps/install-dependencies.yml
   - script: yarn lint:deps
     displayName: "Check dependencies"
-  - script: yarn lint:types
+  - script: yarn lint:typecheck
     displayName: "Check JSDoc types"
   - script: yarn lint:eslint
     displayName: "Lint code"
