--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Lint Code
         run: yarn lint
 
-      - name: Lint prettier
+      - name: Lint Prettier
         run: yarn lint-prettier
 
       - name: Spellcheck
