--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -68,37 +68,7 @@ jobs:
           - "13"
           - "12"
           - "10"
-        standalone:
-          - "standalone"
-          - ""
-        exclude:
-          - os: "macos-latest"
-            node: "13"
-            standalone: "standalone"
-          - os: "macos-latest"
-            node: "12"
-            standalone: "standalone"
-          - os: "windows-latest"
-            node: "13"
-            standalone: "standalone"
-          - os: "windows-latest"
-            node: "12"
-            standalone: "standalone"
-          - os: "macos-latest"
-            node: "13"
-            standalone: ""
-          - os: "macos-latest"
-            node: "12"
-            standalone: ""
-          - os: "windows-latest"
-            node: "13"
-            standalone: ""
-          - os: "windows-latest"
-            node: "12"
-            standalone: ""
-    env:
-      STANDALONE: ${{ matrix.standalone }}
-    name: Node.js ${{ matrix.node }} on ${{ matrix.os }} ${{ matrix.standalone }}
+    name: Node.js ${{ matrix.node }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: [build]
     steps:
@@ -124,3 +94,42 @@ jobs:
       - name: Run Tests
         run: yarn test:dist
 
+  standalone:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - "ubuntu-latest"
+          - "macos-latest"
+          - "windows-latest"
+        node:
+          - "13"
+          - "12"
+          - "10"
+    env:
+      STANDALONE: "true"
+    name: Node.js ${{ matrix.node }} on ${{ matrix.os }} (standalone)
+    runs-on: ${{ matrix.os }}
+    needs: [build]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Install Dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Download Artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: dist
+          path: dist
+
+      - name: Run Tests
+        run: yarn test:dist
