--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "linguist-languages": "7.7.0",
     "lodash": "4.17.15",
     "mem": "5.1.1",
-    "minimatch": "3.0.4",
+    "micromatch": "4.0.2",
     "minimist": "1.2.0",
     "n-readlines": "1.0.0",
     "normalize-path": "3.0.0",
