--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "editorconfig-to-prettier": "0.1.1",
     "escape-string-regexp": "2.0.0",
     "esutils": "2.0.3",
+    "fast-glob": "3.2.2",
     "find-parent-dir": "0.3.0",
     "find-project-root": "1.1.1",
     "flow-parser": "0.120.1",
