--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -42,7 +42,7 @@ jobs:
         run: yarn test
 
       - name: Upload Coverage
-        uses: codecov/codecov-action@master
+        uses: codecov/codecov-action@v1
         if: matrix.ENABLE_CODE_COVERAGE
         with:
           file: ./coverage/lcov.info
