--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -239,3 +239,6 @@
 - caption: SwissDev DevOps Jobs
   image: /images/users/swissdev-devops-jobs-200-100.png
   infoLink: https://swissdevjobs.ch/jobs/Dev-Ops/All
+- caption: TheAbbie
+  image: https://theabbie.github.io/files/logo.png
+  infoLink: https://theabbie.github.io
