--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run Tests
-        run: yarn test --runInBand
+        run: yarn test --maxWorkers=4
 
       - name: Upload Coverage
         uses: codecov/codecov-action@v1
