#7893 Disable CI Failure on coverage error.

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -53,4 +53,4 @@ jobs:
         if: matrix.ENABLE_CODE_COVERAGE
         with:
           file: ./coverage/lcov.info
-          fail_ci_if_error: true
+          fail_ci_if_error: false
