Try upload coverage with token

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -52,5 +52,6 @@ jobs:
         uses: codecov/codecov-action@v1
         if: matrix.ENABLE_CODE_COVERAGE
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage/lcov.info
           fail_ci_if_error: true
