--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "minimist": "1.2.5",
     "n-readlines": "1.0.0",
     "please-upgrade-node": "3.2.0",
+    "postcss": "7.0.27",
     "postcss-less": "3.1.4",
     "postcss-media-query-parser": "0.2.3",
     "postcss-scss": "2.0.0",
