--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "lint:eslint": "cross-env EFF_NO_LINK_RULES=true eslint . --format friendly",
     "lint:changelog": "node ./scripts/lint-changelog.mjs",
     "lint:prettier": "prettier . \"!test*\" --check",
+    "lint:prettier:dev": "node ./bin/prettier.js . \"!test*\" --check",
     "lint:dist": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.js \"dist/!(bin-prettier|index|third-party).js\"",
     "lint:spellcheck": "cspell --no-progress --relative",
     "lint:deps": "node ./scripts/check-deps.mjs",
@@ -160,6 +161,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
+    "fix:prettier:dev": "yarn lint:prettier:dev --write",
     "build": "node --max-old-space-size=3072 ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
