--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,8 +33,13 @@ jobs:
       - name: Lint ESLint
         run: yarn lint:eslint
 
-      - name: Lint Prettier
+      - name: Lint Prettier (latest stable)
         run: yarn lint:prettier
+        if: ${{ github.ref != 'ref/heads/next' && github.base_ref != 'next' }}
+
+      - name: Lint Prettier (current source)
+        run: yarn lint:prettier:dev
+        if: ${{ github.ref == 'ref/heads/next' || github.base_ref == 'next' }}
 
       - name: Spellcheck
         run: yarn lint:spellcheck
