--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -88,6 +88,7 @@ jobs:
           - "macos-latest"
           - "windows-latest"
         node:
+          - "17"
           - "16.10.0"
           - "14"
           - "12"
@@ -98,9 +99,13 @@ jobs:
             FULL_TEST: true
         exclude:
           - os: "macos-latest"
+            node: "16.10.0"
+          - os: "macos-latest"
             node: "14"
           - os: "macos-latest"
             node: "12"
+          - os: "windows-latest"
+            node: "16.10.0"
           - os: "windows-latest"
             node: "14"
           - os: "windows-latest"
