Add DevIT to users

--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -257,3 +257,6 @@
 - caption: Icons8
   image: /images/users/icons8.svg
   infoLink: https://icons8.com
+- caption: Dev IT jobs
+  image: /images/users/dev-it-jobs-200-100.jpg
+  infoLink: https://devitjobs.uk
