--- a/website/data/users.yml
+++ b/website/data/users.yml
@@ -260,3 +260,6 @@
 - caption: Dev IT jobs
   image: /images/users/dev-it-jobs-200-100.jpg
   infoLink: https://devitjobs.uk
+- caption: Foo
+  image: /images/users/foo.jpg
+  infoLink: https://example.com
