--- a/.github/workflows/prevent-updating-users-yml.yml
+++ b/.github/workflows/prevent-updating-users-yml.yml
@@ -12,10 +12,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
-        issue-number: ${{ github.event.number }}
-        body: |
-          Thank you for using Prettier! But we don't accept updating `users.yml` anymore.
-          If you created this PR for a purpose other than adding users, please ping a maintainer.
+        with:
+          issue-number: ${{ github.event.number }}
+          body: |
+            Thank you for using Prettier! But we don't accept updating `users.yml` anymore.
+            If you created this PR for a purpose other than adding users, please ping a maintainer.
       - name: Close PR
         uses: actions-cool/issues-helper@v2
         with:
