--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@babel/parser": "7.16.3",
     "@glimmer/syntax": "0.83.1",
     "@iarna/toml": "2.2.5",
-    "@typescript-eslint/typescript-estree": "5.3.1",
+    "@typescript-eslint/typescript-estree": "5.4.0",
     "angular-estree-parser": "2.5.0",
     "angular-html-parser": "1.8.0",
     "camelcase": "6.2.0",
@@ -79,7 +79,7 @@
     "semver": "7.3.5",
     "string-width": "4.2.2",
     "strip-ansi": "6.0.0",
-    "typescript": "4.4.4",
+    "typescript": "4.5.1-rc",
     "unicode-regex": "3.0.0",
     "unified": "9.2.1",
     "vnopts": "1.0.2",
