--- a/package.json
+++ b/package.json
@@ -142,11 +142,11 @@
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
-    "test": "jest",
-    "test:dev-package": "cross-env INSTALL_PACKAGE=1 jest",
-    "test:dist": "cross-env NODE_ENV=production jest",
-    "test:dist-standalone": "cross-env NODE_ENV=production TEST_STANDALONE=1 jest",
-    "test:integration": "jest tests/integration",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:dev-package": "cross-env INSTALL_PACKAGE=1 NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:dist": "cross-env NODE_ENV=production NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:dist-standalone": "cross-env NODE_ENV=production TEST_STANDALONE=1 NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest tests/integration",
     "perf:repeat": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "perf:repeat-inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/bin-prettier.js --debug-repeat ${PERF_REPEAT:-1000} --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
     "perf:benchmark": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/bin-prettier.js --debug-benchmark --loglevel debug ${PERF_FILE:-./index.js} > /dev/null",
