Update execa to v6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
   "exclude": [
     "coverage/",
     "test*.*",
+    "jest.config.mjs",
     // [TBD] JavaScript sources *not* affected by src/language-*:
     "src/main/ast-to-doc.js",
     "src/main/core.js",
