--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "semver": "7.3.5",
     "string-width": "4.2.2",
     "strip-ansi": "6.0.0",
-    "typescript": "4.5.1-rc",
+    "typescript": "4.5.2",
     "unicode-regex": "3.0.0",
     "unified": "9.2.1",
     "vnopts": "1.0.2",
@@ -162,7 +162,7 @@
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "build": "node --max-old-space-size=3072 ./scripts/build/build.mjs",
+    "build": "node --max-old-space-size=4096 ./scripts/build/build.mjs",
     "build:website": "node ./scripts/build-website.mjs"
   },
   "browserslist": [
