--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "regexp-util": "1.2.2",
     "remark-gfm": "3.0.1",
     "remark-math": "5.1.1",
+    "remark-mdx": "1.6.22",
     "remark-parse": "10.0.1",
     "resolve": "1.20.0",
     "semver": "7.3.5",
