--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "remark-math": "5.1.1",
     "remark-mdx": "1.6.22",
     "remark-parse": "10.0.1",
+    "remark-wiki-link": "1.0.4",
     "resolve": "1.20.0",
     "semver": "7.3.5",
     "string-width": "4.2.3",
