--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@babel/preset-env": "7.16.4",
     "@babel/types": "7.16.0",
     "@glimmer/reference": "0.83.1",
+    "@jest/globals": "27.4.2",
     "@rollup/plugin-alias": "3.1.8",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "21.0.1",
