--- a/scripts/release/package.json
+++ b/scripts/release/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "chalk": "5.0.0",
+    "chalk-template": "0.2.0",
     "execa": "6.0.0",
     "minimist": "1.2.5",
     "node-fetch": "3.1.0",
