--- a/scripts/release/package.json
+++ b/scripts/release/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "chalk": "5.0.0",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@jest/globals": "27.3.1",
+    "cross-env": "7.0.3",
     "jest": "27.3.1"
   }
 }
