--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "pretty-bytes": "5.6.0",
     "rimraf": "3.0.2",
     "rollup": "2.60.2",
+    "rollup-plugin-license": "2.2.0",
     "rollup-plugin-polyfill-node": "0.7.0",
     "rollup-plugin-terser": "7.0.2",
     "snapshot-diff": "0.9.0",
