--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --max-old-space-size=4096\" jest",
     "test:integration": "yarn test tests/integration",
     "test:format": "yarn test tests/format",
     "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
