--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "postcss-values-parser": "2.0.1",
     "regexp-util": "1.2.2",
     "remark-footnotes": "2.0.0",
+    "remark-gfm": "1.0.0",
     "remark-math": "3.0.1",
     "remark-parse": "9.0.0",
     "resolve": "1.22.0",
