--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,5 @@
   command = "yarn build:website"
 
 [build.environment]
-  NODE_VERSION = "14"
-  YARN_VERSION = "1.22.10"
+  NODE_VERSION = "lts/*"
+  YARN_VERSION = "1.22.15"
