--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-watch-typeahead": "1.0.0",
     "node-actionlint": "1.2.2",
+    "mdast-util-from-markdown": "1.2.0",
+    "micromark-util-types": "1.0.2",
     "node-fetch": "3.2.3",
     "npm-run-all": "4.1.5",
     "path-browserify": "1.0.1",
