Steal `@babel/jest-light-runner` from babel

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,7 @@
 /tests/format/**/*.js
 /tests/integration/cli/
 !/tests/format/**/jsfmt.spec.js
+/tests/config/jest-light-runner/**/*
 !/**/.eslintrc.js
 /test*.*
 /scripts/release/node_modules
