--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
+    "@babel/jest-light-runner": "file:./tests/config/jest-light-runner",
     "@babel/preset-env": "7.16.4",
     "@babel/types": "7.16.0",
     "@glimmer/reference": "0.83.1",
@@ -141,9 +142,8 @@
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "prepare-release": "yarn && yarn build && yarn test:dist",
-    "test": "node --experimental-vm-modules --expose-gc --max-old-space-size=4096 ./node_modules/jest/bin/jest.js",
-    "test:integration": "yarn test tests/integration",
-    "test:format": "yarn test tests/format",
+    "test:integration": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js tests/integration",
+    "test:format": "jest --config=jest-format-test.config.mjs tests/format",
     "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
     "test:dist:lint": "eslint --no-eslintrc --no-ignore --no-inline-config --config=./scripts/bundle-eslint-config.js \"dist/!(bin-prettier|index|third-party).js\"",
     "test:dist:integration": "cross-env NODE_ENV=production yarn test:integration",
